<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:id="@+id/tvBeginDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrder"
        android:layout_above="@+id/tvNewsDeskValues"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="wrap_content"
        android:entries="@array/sort_array"
        android:prompt="@string/sort_prompt"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSortOrder"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_marginBottom="27dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk"
        android:id="@+id/tvNewsDeskValues"
        android:layout_above="@+id/btnSave"
        android:layout_marginBottom="137dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp"
        android:id="@+id/btnSave"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arts"
        android:id="@+id/cbArts"
        android:layout_below="@+id/spinnerSort"
        android:layout_alignRight="@+id/btnSave"
        android:layout_alignEnd="@+id/btnSave"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fashion &amp; Style"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDate"
        android:layout_alignTop="@+id/tvBeginDate"
        android:layout_alignLeft="@+id/spinnerSort"
        android:layout_alignStart="@+id/spinnerSort"
        />


</RelativeLayout>